--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,10 +12,11 @@ pipeline {
                         label "VM2_1"
                     }
                     steps {
+                        git branch: 'main'
                         git url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
                     
                     }
                 }
@@ -28,7 +29,7 @@ pipeline {
                         git url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
                     
                     }
                 }
@@ -41,7 +42,7 @@ pipeline {
                         git url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
                     
                     }
                 }   
