--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,8 +12,8 @@ pipeline {
                         label "VM2_1"
                     }
                     steps {
-                        git branch: 'main'
-                        git url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
+                        git branch: 'main',
+                        url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
                         bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
@@ -26,7 +26,8 @@ pipeline {
                         label "VM2_3"
                     }
                     steps {
-                        git url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
+                        git branch: 'main',
+                        url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
                         bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
@@ -39,7 +40,8 @@ pipeline {
                         label "VM2_3"
                     }
                     steps {
-                        git url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
+                        git branch: 'main',
+                        url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
                         bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
