--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,6 +7,11 @@ pipeline {
 
         stage('Cypress Parallel Test Suite') {
             parallel {
+                stage('Prendo vms'){
+                    steps{
+                        bat 'java -jar agent.jar -url http://localhost:8080/ -secret 9130e8b46d6dcb7128e435733960671f9b33d9ffe7f4e2323b0dadaebacb41a3 -name VM2 -workDir "/home/"'
+                    }
+                }
                 stage('VM2_1') {
                     agent {
                         label "VM2_1"
@@ -16,7 +21,7 @@ pipeline {
                         url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --spec "cypress\\e2e\\Curso Cypress\\Asserts --browser chrome --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
                     
                     }
                 }
@@ -30,12 +35,12 @@ pipeline {
                         url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --spec "cypress\\e2e\\FSM\\* --browser chrome --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
                     
                     }
                 }
 
-                stage('VM2_3') {
+              /* stage('VM2_3') {
                     agent {
                         label "VM2_3"
                     }
@@ -46,8 +51,8 @@ pipeline {
                         bat 'npm update'                       
                         bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
                     
-                    }
-                }   
+                    } 
+                }    */
             }         
         }
     }          
