--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "cypress": "^13.7.1",
     "cypress-file-upload": "^5.0.8",
+    "cypress-if": "^1.12.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-xpath": "^2.0.1",
     "esbuild": "^0.20.2"
   },
   "dependencies": {
-    "@badeball/cypress-cucumber-preprocessor": "^20.0.2"
+    "@azure/msal-browser": "^3.11.1",
+    "@badeball/cypress-cucumber-preprocessor": "^20.0.2",
+    "xlsx": "^0.18.5"
   }
 }
