--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,7 +22,7 @@ pipeline {
                         url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run --spec "cypress\\e2e\\Curso Cypress\\Asserts --browser chrome --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser chrome --parallel'
                     
                     }
                 }
@@ -36,7 +36,7 @@ pipeline {
                         url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run --spec "cypress\\e2e\\FSM\\* --browser chrome --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1  --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\FSM\\*" --browser chrome --parallel'
                     
                     }
                 }
