--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,21 +22,21 @@ pipeline {
                         url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser chrome --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser chrome'
                     
                     }
                 }
 
                 stage('VM2_2') {
                     agent {
-                        label "VM2_3"
+                        label "VM2_2"
                     }
                     steps {
                         git branch: 'main',
                         url: 'https://github.com/panaderodiaz98/Cypress_curso.git'
                         bat 'npm install'
                         bat 'npm update'                       
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\FSM\\Tests\\*" --browser chrome --parallel'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\FSM\\Tests\\*" --browser chrome'
                     
                     }
                 }
