--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cypress-if": "^1.12.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-xpath": "^2.0.1",
-    "esbuild": "^0.20.2"
+    "esbuild": "^0.20.2",
+    "mocha": "^10.4.0"
   },
   "dependencies": {
     "@azure/msal-browser": "^3.11.1",
