--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "cypress": "^13.7.1",
     "cypress-file-upload": "^5.0.8",
     "cypress-if": "^1.12.0",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-xpath": "^2.0.1",
     "esbuild": "^0.20.2",
-    "mocha": "^10.4.0"
+    "mocha": "^10.4.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0"
   },
   "dependencies": {
     "@azure/msal-browser": "^3.11.1",
