Agrego stage/steps en post..

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,14 +26,20 @@ pipeline
     {
         always
         {
-            steps
+            stage('Post mail')
             {
-                mail bcc: '', body: '''Se comunica a los correspondientes emails la ejecucion finalizada de la regresion Cypress via Jenkins con reporte.
-                Saludos''', cc: '', from: '', replyTo: '', subject: 'Regresion Jenkins', to: 'panaderodiaz98@gmail.com'
+                steps
+                {
+                    mail bcc: '', body: '''Se comunica a los correspondientes emails la ejecucion finalizada de la regresion Cypress via Jenkins con reporte.
+                    Saludos''', cc: '', from: '', replyTo: '', subject: 'Regresion Jenkins', to: 'panaderodiaz98@gmail.com'
+                }
             }
-            steps
+            stage('Envio reporte')
             {
-                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'cypress/reports/', reportFiles: 'Ejecucion_jenkins.html', reportName: 'Reporte jenkins', reportTitles: 'Reporte jenkins', useWrapperFileDirectly: true])
+                steps
+                {
+                        publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'cypress/reports/', reportFiles: 'Ejecucion_jenkins.html', reportName: 'Reporte jenkins', reportTitles: 'Reporte jenkins', useWrapperFileDirectly: true])
+                }
             }
         }
     }         
