corrijo ruta reporte

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,9 +26,7 @@ pipeline
     {
         always
         {
-            mail bcc: '', body: '''Se comunica a los correspondientes emails la ejecucion finalizada de la regresion Cypress via Jenkins con reporte.
-            Saludos''', cc: '', from: '', replyTo: '', subject: 'Regresion Jenkins', to: 'panaderodiaz98@gmail.com'
-            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'cypress/reports/', reportFiles: 'Ejecucion_jenkins.html', reportName: 'Reporte jenkins', reportTitles: 'Reporte jenkins', useWrapperFileDirectly: true])
+            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'cypress/reports/html/', reportFiles: 'Ejecucion_jenkins.html', reportName: 'Reporte jenkins', reportTitles: 'Reporte jenkins', useWrapperFileDirectly: true])
         }
     }         
 }
