--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,7 +26,7 @@ pipeline
     {
         always
         {
-            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'C:/ProgramData/Jenkins/.jenkins/jobs/Pipeline_corriendoParalelo/htmlreports/Reporte_20jenkins', reportFiles: 'Ejecucion_jenkins.html', reportName: 'Reporte jenkins', reportTitles: 'Reporte jenkins', useWrapperFileDirectly: true])
+            mail bcc: '', body: 'Hola que tal como estas', cc: '', from: '', replyTo: '', subject: 'Probando mail', to: 'panaderodiaz98@gmail.com'
         }
     }         
 }
