--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,6 +2,15 @@ pipeline
 {
     agent any
 
+    parameters
+    {
+        string(name:"Spec", defaultValue:"cypress\\e2e\\**\\**", description:"Ingresar spec a ejecutar. Ej: cypress\\e2e\\FSM\\Tests\\Reserva_material_no_seriado.cy.js")
+        choice(name:"Browser", choices:['chrome','edge','firefox'], description:"Elegir tipo de browser a testear")
+    }
+    options
+    {
+        ansiColor('xterm')
+    }
     tools {nodejs "Node"}
 
     stages 
@@ -18,7 +27,7 @@ pipeline
         stage('Ejecuto tests') 
         {
              steps {
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser chrome'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec ${Spec} --browser ${Browser}'
                     }
         }   
     }
