--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,9 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      -name: Checkout
-       uses: actions/checkout@v4
-      -name: Install Dependecies
-       run: npm install && npm update
-      -name: Cypress.io
-       uses: cypress-io/github-action@v6.5.0
-         with:
-            record: true
-            browser: chrome
-            reporter: cypress-mochawesome-reporter
-       
+        - name: Checkout
+          uses: actions/checkout@v4.1.4
+        - name: Cypress.io
+          # You may pin to the exact commit or the version.
+          # uses: cypress-io/github-action@59810ebfa5a5ac6fcfdcfdf036d1cd4d083a88f2
+          uses: cypress-io/github-action@v6.5.0
