--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,9 +21,11 @@ pipeline
         stage('Ejecuto tests') 
         {
              steps {
+                        echo '$NAVEGADOR'
                         echo '${params.NAVEGADOR}'
-                        echo '${params.RUTASPEC}'
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser ${params.NAVEGADOR}'
+                        echo '${NAVEGADOR}'
+                        echo 'params.NAVEGADOR'
+                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser params.NAVEGADOR'
                     }
         }   
     }
