--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,10 @@
 pipeline 
 {
     agent any
+     parameters{
+            choice(name:'NAVEGADOR', choices: ['chrome','edge'],description:'Eleccion navegador a ejecutar')
+            string(name:'RUTASPEC',description: 'Ruta a ejecutar de specs. EJ:"--spec "cypress\\e2e\\Curso Cypress\\Asserts""')
+                      }
     tools {nodejs "Node"}
     stages 
     {
@@ -15,16 +19,12 @@ pipeline
         }
         stage('Ejecuto tests') 
         {
-            parameters{
-            choice(name:'NAVEGADOR', choices: ['chrome','edge'],description:'Eleccion navegador a ejecutar')
-            string(name:'RUTASPEC',description: 'Ruta a ejecutar de specs. EJ:"--spec "cypress\\e2e\\Curso Cypress\\Asserts""')
-                      }
              steps {
-                        echo '$NAVEGADOR'
-                        echo '${params.NAVEGADOR}'
-                        echo '${NAVEGADOR}'
-                        echo 'params.NAVEGADOR'
-                        bat 'npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec "cypress\\e2e\\Curso Cypress\\Asserts" --browser params.NAVEGADOR'
+                        echo "$NAVEGADOR"
+                        echo "${params.NAVEGADOR}"
+                        echo "${NAVEGADOR}"
+                        echo "params.NAVEGADOR"
+                        bat "npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec 'cypress\\e2e\\Curso Cypress\\Asserts' --browser ${NAVEGADOR}"
                     }
         }   
     }
