--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,7 +3,7 @@ pipeline
     agent any
      parameters{
             choice(name:'NAVEGADOR', choices: ['chrome','edge'],description:'Eleccion navegador a ejecutar')
-            string(name:'RUTASPEC',description: 'Ruta a ejecutar de specs. EJ:"--spec "cypress\\e2e\\Curso Cypress\\Asserts""')
+            string(name:'RUTASPEC',description: 'Ruta a ejecutar de specs. EJ:"--spec "cypress\\e2e\\Curso Cypress\\Asserts"')
                       }
     tools {nodejs "Node"}
     stages 
@@ -24,7 +24,8 @@ pipeline
                         echo "${params.NAVEGADOR}"
                         echo "${NAVEGADOR}"
                         echo "params.NAVEGADOR"
-                        bat "npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec 'cypress\\e2e\\Curso Cypress\\Asserts' --browser ${NAVEGADOR}"
+                        echo "ruta ""${RUTASPEC}"""
+                        bat "npx cypress run --record --key 708bb905-e9e2-410c-9cfa-6fbf2e7030e1 --spec ""${RUTASPEC}"" --browser ${NAVEGADOR}"
                     }
         }   
     }
